Makefiles for MacOS

--- a/Examples/Koripallo/Koripallo.MacOS.csproj
+++ b/Examples/Koripallo/Koripallo.MacOS.csproj
@@ -125,7 +125,7 @@
   <ItemGroup />
   <ItemGroup />
   <ItemGroup />
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <_PostBuildHookTimestamp>@(IntermediateAssembly-&gt;'%(FullPath).timestamp')</_PostBuildHookTimestamp>
   </PropertyGroup>
