--- a/NuGet/Makefile
+++ b/NuGet/Makefile
@@ -3,15 +3,20 @@ all:	windowsgl linux
 rebuild:
 	make clean && make
 
+rebuild-macos:
+	make clean && make macos
+
 clean:
-	rm -f $$(find . -wholename '*/lib/Jypeli.*') && \
-	rm -f $$(find . -wholename '*/lib/4.5/Jypeli.*' -or -name '*.nupkg') && \
-	rm -f Jypeli.Linux/lib/4.5/MonoGame.Framework.dll Jypeli.Linux/lib/4.5/NVorbis.dll Jypeli.Linux/lib/4.5/OpenTK.* Jypeli.Linux/lib/4.5/Tao.Sdl.* && \
-	rm -fd $$(find . -wholename '*/lib/4.5') && \
-	rm -fd $$(find . -name 'lib')
+	rm -f Jypeli.*/lib/4.5/* && \
+	rm -fd Jypeli.*/lib/4.5 && \
+	rm -fd Jypeli.*/lib && \
+	rm -f $$(find . -wholename '*/lib/4.5/Jypeli.*' -or -name '*.nupkg')
 
 release: rebuild
 	find . -name '*.nupkg' -exec nuget push {} \;
+
+release-macos: rebuild-macos
+	find . -wholename '*MacOS/*.nupkg' -exec nuget push {} \;
 
 windowsgl: copywindowsgl
 	sh -c "cd Jypeli.WindowsGL && nuget pack"
@@ -20,6 +25,11 @@ linux:	copylinux
 	sh -c "cd Jypeli.Linux && nuget pack" ; \
 	sh -c "cd Jypeli.Physics2d.Linux && nuget pack" ; \
 	sh -c "cd Jypeli.SimplePhysics.Linux && nuget pack"
+
+macos:	copymacos
+	sh -c "cd Jypeli.MacOS && nuget pack" ; \
+	sh -c "cd Jypeli.Physics2d.MacOS && nuget pack" ; \
+	sh -c "cd Jypeli.SimplePhysics.MacOS && nuget pack"
 
 copywindowsgl:
 	mkdir -p Jypeli.WindowsGL/lib/4.5 ; \
@@ -50,4 +60,23 @@ copylinuxphys2d:
 copylinuxsimplephys:
 	mkdir -p Jypeli.SimplePhysics.Linux/lib/4.5 ; \
 	cp ../Compiled/Linux-AnyCPU/Jypeli.SimplePhysics.dll Jypeli.SimplePhysics.Linux/lib/4.5
+
+copymacos: copymacosjypeli copymacosphys2d copymacossimplephys
+
+copymacosjypeli:
+	mkdir -p Jypeli.MacOS/lib/4.5 ; \
+	cp ../Compiled/MacOS-AnyCPU/Jypeli.dll Jypeli.MacOS/lib/4.5 && \
+	cp ../Compiled/MacOS-AnyCPU/Jypeli.xml Jypeli.MacOS/lib/4.5 && \
+	cp ../Compiled/MacOS-AnyCPU/MonoGame.Framework.dll Jypeli.MacOS/lib/4.5 && \
+	cp ../Compiled/MacOS-AnyCPU/OpenTK.* Jypeli.MacOS/lib/4.5 && \
+	cp ../Compiled/MacOS-AnyCPU/Tao.Sdl.* Jypeli.MacOS/lib/4.5
+	cp ../Compiled/MacOS-AnyCPU/MonoMac.dll Jypeli.MacOS/lib/4.5
+
+copymacosphys2d:
+	mkdir -p Jypeli.Physics2d.MacOS/lib/4.5 ; \
+	cp ../Compiled/MacOS-AnyCPU/Jypeli.Physics2d.dll Jypeli.Physics2d.MacOS/lib/4.5
+
+copymacossimplephys:
+	mkdir -p Jypeli.SimplePhysics.MacOS/lib/4.5 ; \
+	cp ../Compiled/MacOS-AnyCPU/Jypeli.SimplePhysics.dll Jypeli.SimplePhysics.MacOS/lib/4.5
 
