--- a/Projektimallit/Android/TasohyppelypeliAndroid/Tasohyppelypeli.csproj
+++ b/Projektimallit/Android/TasohyppelypeliAndroid/Tasohyppelypeli.csproj
@@ -82,9 +82,12 @@
 	<None Include="Content\tahti.png" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="MonoGame.Framework">
+       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\Android\MonoGame.Framework.dll</HintPath>
+    </Reference>
+
     <Reference Include="Jypeli.Physics2d" />
     <Reference Include="Jypeli" />
-    <Reference Include="MonoGame.Framework" />
     <Reference Include="OpenTK-1.0" />
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
