--- a/NuGet/Jypeli.MacOS/Jypeli.MacOS.nuspec
+++ b/NuGet/Jypeli.MacOS/Jypeli.MacOS.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Jypeli.MacOS</id>
-    <version>0.1.6</version>
+    <version>0.2.0</version>
     <authors>Jyväskylän yliopisto</authors>
     <owners>Jyväskylän yliopisto</owners>
     <projectUrl>http://bit.ly/pelikurssi</projectUrl>
@@ -14,5 +14,6 @@
   </metadata>
   <files>
     <file src="lib/**" target="lib"/>
+    <file src="content/**" target="content"/>
   </files>
 </package>
