Linux project uses precompiled Monogame for now
Until the new project templates with content build support
are released for Linux, it's better to use the old MonoGame
with better support for raw (uncompiled) content.

--- a/NuGet/Jypeli.Linux/Jypeli.Linux.nuspec
+++ b/NuGet/Jypeli.Linux/Jypeli.Linux.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Jypeli.Linux</id>
-    <version>0.1.1</version>
+    <version>0.1.2</version>
     <authors>Jyväskylän yliopisto</authors>
     <owners>Jyväskylän yliopisto</owners>
     <projectUrl>http://bit.ly/pelikurssi</projectUrl>
@@ -12,4 +12,7 @@
     <copyright></copyright>
     <tags>jypeli</tags>
   </metadata>
+  <files>
+    <file src="lib/**" target="lib"/>
+  </files>
 </package>
