(MonoGame) DataStorageTest for WP8.1: project references instead of assembly references

--- a/branches/MonoGame/testit/DataStorageTest/DataStorageTest-WP8/DataStorageTest-WP8.csproj
+++ b/branches/MonoGame/testit/DataStorageTest/DataStorageTest-WP8/DataStorageTest-WP8.csproj
@@ -82,12 +82,6 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Jypeli" />
-    <Reference Include="MonoGame.Framework">
-      <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\WindowsPhone81\MonoGame.Framework.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -130,6 +124,16 @@
   </PropertyGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Jypeli\Jypeli.WindowsPhone81.csproj">
+      <Project>{86788b50-91ad-480e-8a06-e9c94fd1f07b}</Project>
+      <Name>Jypeli.WindowsPhone81</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsPhone81.csproj">
+      <Project>{6522b7e9-25a5-4250-b164-42cc2c4eccad}</Project>
+      <Name>MonoGame.Framework.WindowsPhone81</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
