(MonoGame) Added high score list testing to data storage tests. Tests now pass on Win8.1 and WP8.1 platforms, though saved fields and properties have to be declared public.

--- a/branches/MonoGame/testit/DataStorageTest/DataStorageTest-WP8/DataStorageTest-WP8.csproj
+++ b/branches/MonoGame/testit/DataStorageTest/DataStorageTest-WP8/DataStorageTest-WP8.csproj
@@ -88,7 +88,9 @@
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Peli.cs" />
+    <Compile Include="..\DataStorageTest\Peli.cs">
+	  <Link>Peli.cs</Link>
+	</Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
